<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, MainScreen!</string>
    <string name="app_name">Event Assistance</string>
    <string name="main_screen_title">Event Assistance</string>
    <string name="main_screen_button_contact_text">Contacts</string>
    <string name="main_screen_button_event_text">Events</string>
    <string name="main_screen_button_setting_text">Settings</string>
    <string name="main_screen_button_calendar_text">Calendar</string>
    <string name="main_screen_button_help_text">Help</string>
    <string name="main_screen_button_backup_restore_text">Backup </string>
    <string name="main_screen_button_share_text">Share</string>
    <string name="contact_list_group_all">All</string>
    <string name="contact_detail_option_menu_edit">Edit</string>
    <string name="contact_detail_none">None</string>
    <string name="contact_edit_birthday_text">Birthday:</string>
    <string name="contact_edit_cancel">Cancel</string>
    <string name="contact_edit_save">Save</string>
    <string name="contact_edit_name">Name:</string>
    <string name="contact_edit_birthday_button_text">Pick a data</string>	
	<string name="event_content">内容:</string>
	<string name="event_beginTime">开始时间:</string>
	<string name="event_endTime">结束时间:</string>
	<string name="event_location">发生地点:</string>
	<string name="event_contact">联系人:</string>
	<string name="event_note">备注:</string>
	<string name="event_today_remind_time">当日提前提醒：</string>
	<string name="event_prior_alarm_day">提前天数:</string>
	<string name="event_repeat">提前重复次数:</string>
	<string name="event_alarm_type">提醒方式:</string>
	<string name="event_add_content_hint">事件内容</string>
	<string name="event_add_contact_hint">输入联系人</string>
	<string name="event_add_location_hint">输入地点</string>
	<string name="event_add_note_hint">输入备注</string>
	<string name="event_add_prior_alarm_day_spinner_prompt">选择天数</string>
	<string name="event_add_prior_alarm_repeat_spinner_prompt">提醒次数</string>	
	
	<string name="event_edit_content_hint">事件内容</string>
	<string name="event_edit_contact_hint">输入联系人</string>
	<string name="event_edit_location_hint">输入地点</string>
	<string name="event_edit_note_hint">输入备注</string>
	<string name="event_edit_prior_alarm_day_spinner_prompt">选择天数</string>
	<string name="event_edit_prior_alarm_repeat_spinner_prompt">提醒次数</string>	
	
	<string name="event_authority">ustc.sse.provider.EventAssistant.event</string>
	<string name="event_contact_authority">ustc.sse.provider.EventAssistant.eventcontact</string>
	<string name="event_save">保存</string>
	<string name="event_cancel">取消</string>
	<string name="event_edit">编辑</string>
	<string name="event_delete">删除</string>
	<string name="new_event">新事件</string>
	<string name="events">本月事件</string>
	<string name="event_jump_to_date">跳转</string>
	
	<string name="birthday_list">生日</string>
	
	<string name="event_detail_delete_button">删除</string>
	<string name="event_detail_delete_dialog_title">删除事件</string>
	<string name="event_detail_delete_dialog_message">确认删除选中的事件?</string>
	<string name="event_detail_delete_dialog_affirm">确认</string>
	<string name="event_detail_delete_dialog_cancel">取消</string>
	
	<string name="event_list_select_button">全选</string>
	<string name="event_list_deselect_button">全不选</string>
	<string name="event_list_delete_button">删除</string>
	<string name="event_list_delete_dialog_title">删除事件</string>
	<string name="event_list_delete_dialog_message">确认删除选中的事件?</string>
	<string name="event_list_delete_dialog_affirm">确认</string>
	<string name="event_list_delete_dialog_cancel">取消</string>
	
	<string name="search_hint">搜索事件内容</string>
	<string name="search_settings_description">搜索事件助手</string>
	<string name="search_event">搜索</string>
	
	<string name="event_search_authority">ustc.sse.provider.EventAssistant.search</string>
</resources> 
