<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent">


	<LinearLayout android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:orientation="horizontal"
		android:layout_alignParentBottom="true" android:id="@+id/event_detail_button_bar">
		<Button android:id="@+id/event_detail_edit_button"
			android:layout_weight="1" android:layout_width="0dp"
			android:layout_height="wrap_content" android:text="@string/event_edit"
			android:gravity="center">
		</Button>

		<Button android:id="@+id/event_detail_delete_button"
			android:layout_weight="1" android:layout_width="0dp"
			android:layout_height="wrap_content" android:text="@string/event_delete"
			android:gravity="center">
		</Button>
	</LinearLayout>

	<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
		android:scrollbars="none" android:layout_width="match_parent"
		android:layout_height="wrap_content" android:layout_alignParentTop="true"
		android:layout_above="@id/event_detail_button_bar">
		<LinearLayout android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:orientation="vertical"
			android:id="@+id/event_detail_linearLayout">

			<LinearLayout android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:orientation="vertical">
				<TextView android:layout_width="wrap_content"
					android:layout_height="wrap_content" android:text="@string/event_content"
					android:layout_gravity="left|center">
				</TextView>
				<TextView android:id="@+id/event_detail_content"
					android:layout_width="fill_parent" android:layout_height="wrap_content"
					android:layout_gravity="left|center">
				</TextView>
			</LinearLayout>

			<LinearLayout android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:orientation="vertical">
				<TextView android:layout_width="wrap_content"
					android:layout_height="wrap_content" android:text="@string/event_beginTime"
					android:layout_gravity="left|center">
				</TextView>
				<TextView android:id="@+id/event_detail_beginTime"
					android:layout_width="fill_parent" android:layout_height="wrap_content"
					android:layout_gravity="left|center">
				</TextView>
			</LinearLayout>

			<LinearLayout android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:orientation="vertical">
				<TextView android:layout_width="wrap_content"
					android:layout_height="wrap_content" android:text="@string/event_endTime"
					android:layout_gravity="left|center">
				</TextView>
				<TextView android:id="@+id/event_detail_endTime"
					android:layout_width="fill_parent" android:layout_height="wrap_content"
					android:layout_gravity="left|center">
				</TextView>
			</LinearLayout>

			<LinearLayout android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:orientation="vertical">
				<TextView android:layout_width="wrap_content"
					android:layout_height="wrap_content" android:text="@string/event_location"
					android:layout_gravity="left|center">
				</TextView>
				<TextView android:id="@+id/event_detail_location"
					android:layout_width="fill_parent" android:layout_height="wrap_content"
					android:layout_gravity="left|center">
				</TextView>
			</LinearLayout>

			<LinearLayout android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:orientation="vertical">
				<TextView android:layout_width="wrap_content"
					android:layout_height="wrap_content" android:text="@string/event_contact"
					android:layout_gravity="left|center">
				</TextView>
				<TextView android:id="@+id/event_detail_contact"
					android:layout_width="fill_parent" android:layout_height="wrap_content"
					android:layout_gravity="left|center">
				</TextView>
			</LinearLayout>

			<LinearLayout android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:orientation="vertical">
				<TextView android:layout_width="wrap_content"
					android:layout_height="wrap_content" android:text="@string/event_note"
					android:layout_gravity="left|center">
				</TextView>
				<TextView android:id="@+id/event_detail_note"
					android:layout_width="fill_parent" android:layout_height="wrap_content"
					android:layout_gravity="left|center">
				</TextView>
			</LinearLayout>

			<LinearLayout android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:orientation="vertical">
				<TextView android:layout_width="wrap_content"
					android:layout_height="wrap_content" android:text="@string/event_today_remind_time"
					android:layout_gravity="left|center">
				</TextView>
				<TextView android:id="@+id/event_detail_today_remind_time"
					android:layout_width="fill_parent" android:layout_height="wrap_content"
					android:layout_gravity="left|center">
				</TextView>

			</LinearLayout>

			<LinearLayout android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:orientation="vertical">
				<TextView android:layout_width="wrap_content"
					android:layout_height="wrap_content" android:text="@string/event_prior_alarm_day"
					android:layout_gravity="left|center">
				</TextView>
				<TextView android:id="@+id/event_detail_prior_alarm_day"
					android:layout_width="fill_parent" android:layout_height="wrap_content"
					android:layout_gravity="left|center">
				</TextView>

			</LinearLayout>

			<LinearLayout android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:orientation="vertical">
				<TextView android:layout_width="wrap_content"
					android:layout_height="wrap_content" android:text="@string/event_repeat"
					android:layout_gravity="left|center">
				</TextView>
				<TextView android:id="@+id/event_detail_prior_alarm_repeat"
					android:layout_width="fill_parent" android:layout_height="wrap_content"
					android:layout_gravity="left|center">
				</TextView>
			</LinearLayout>

			<LinearLayout android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:orientation="vertical">
				<TextView android:layout_width="wrap_content"
					android:layout_height="wrap_content" android:text="@string/event_alarm_type"
					android:layout_gravity="left|center">
				</TextView>

				<TextView android:id="@+id/event_detail_alarm_type"
					android:layout_width="fill_parent" android:layout_height="wrap_content"
					android:layout_gravity="left|center">
				</TextView>
			</LinearLayout>


		</LinearLayout>
	</ScrollView>

</RelativeLayout>
