<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  > 
    
  <LinearLayout android:layout_width="fill_parent"
  				android:layout_height="wrap_content"
  				android:orientation="horizontal"
  				android:layout_alignParentTop="true"
  				android:id="@+id/event_add_linearLayout1"
  				>
  				
  	<TextView android:layout_width="wrap_content"
  				android:layout_height="wrap_content"
  				android:textSize="@dimen/event_add_text_size"
  				android:text="@string/event_content"
  				android:id="@+id/event_content">
  	</TextView>
  	<TextView android:layout_width="wrap_content"
  				android:layout_height="wrap_content"
  				android:textSize="@dimen/event_add_text_size"
  				android:text="@string/event_beginTime"
  				android:id="@+id/event_beginTime">
  	</TextView>
  </LinearLayout>
  
  <LinearLayout android:layout_alignParentBottom="true"
  				android:layout_width="fill_parent"
  				android:layout_height="wrap_content"
  				android:orientation="horizontal"
  				android:gravity="center_horizontal"
  				android:id="@+id/event_add_linearLayout2"
  				>
  				
  	<Button android:id="@+id/event_add_save_button"
  			android:layout_weight="1"
  			android:layout_width="0dp"
  			android:layout_height="wrap_content"
  			android:textSize="@dimen/event_add_text_size"
  			android:text="@string/event_save"
  			android:gravity="center">  		
  	</Button>
  	
  	<Button android:id="@+id/event_add_cancel_button"
  			android:layout_weight="1"
  			android:layout_width="0dp"
  			android:layout_height="wrap_content"
  			android:textSize="@dimen/event_add_text_size"
  			android:text="@string/event_cancel"
  			android:gravity="center">
  	</Button>
  	
  </LinearLayout>
</RelativeLayout>
